# ollama-hud

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  run.bat
config/: default.yaml
docs/: architecture.md
native/qml/GenyDL/: Colors.qml  FontSystem.qml  Metrics.qml  Shadow.qml  qmldir  utils.js
native/qml/GenyDL/Controls/: AppMenu.qml  AppMenuSeparator.qml  ComboBox.qml  CommandActionButton.qml  CommandAddUrlButton.qml  DownloadDetailsDialog.qml  DownloadListView.qml  MiniIconButton.qml  ProgressBar.qml  ReleaseDetailsDialog.qml  SidebarTreeItem.qml  SpinBox.qml  VerticalSpacer.qml  qmldir
native/qml/GenyDL/Layout/: qmldir
native/qml/OllamaHud/: Main.qml  Overlay.qml
native/src/: AppController.cpp  AppController.h  CaptureService.cpp  CaptureService.h  ChatLogService.cpp  ChatLogService.h  OllamaService.cpp  OllamaService.h  SettingsStore.cpp  SettingsStore.h  Shortcut.cpp  Shortcut.h  main.cpp
native/tests/: native_tests.cpp
ollama_hud/: __init__.py
packaging/: README.md
scripts/: build_native.ps1
src/ollama_hud/: __init__.py  __main__.py  chat_log.py  cli.py  gui.py  hotkeys.py  hud.py  image_io.py  native_launcher.py  ollama_client.py  runtime.py  settings.py
src/ollama_hud/core/: __init__.py  controller.py  state.py
src/ollama_hud/resources/: __init__.py
src/ollama_hud/services/: __init__.py  capture_service.py  chat_log_service.py  hotkey_service.py  ollama_service.py  settings_service.py
src/ollama_hud/ui/: __init__.py  control_panel.py  status_overlay.py  theme.py
src/ollama_hud/utils/: __init__.py
tests/: test_architecture.py  test_chat_log.py  test_hotkeys.py  test_image_io.py  test_ollama_client.py  test_runtime_integration.py  test_settings.py
